# soltan

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  README.md  cabal.project  flake.nix  hie.yaml  justfile  soltan.cabal
app/: Main.hs
backend/: .hlint.yaml  cabal.project  package.dhall
backend/hokm-api/: hokm-api.cabal  package.dhall
backend/hokm-api/app/: Main.hs
backend/hokm-api/src/Hokm/: Api.hs
backend/hokm-api/src/Hokm/Api/Data/: Authentication.hs  Card.hs  Game.hs  GameResponse.hs  Id.hs  Jwt.hs  Session.hs  User.hs
backend/hokm-api/src/Hokm/Api/Data/Aeson/: FieldErrorFormat.hs  RecordErrorFormat.hs
backend/hokm-api/src/Hokm/Api/Data/ByteString/: Password.hs
backend/hokm-api/src/Hokm/Api/Data/Text/: EmailAddress.hs  Username.hs
backend/hokm-api/src/Hokm/Api/Effect/: GameState.hs  GamesState.hs  Hub.hs  Lobby.hs  Logger.hs  Random.hs  Scrypt.hs  WebSocket.hs
backend/hokm-api/src/Hokm/Api/Effect/Database/: User.hs
backend/hokm-api/src/Hokm/Api/Network/: Anatomy.hs  Server.hs
backend/hokm-api/src/Hokm/Api/Network/Anatomy/: Api.hs  Prelude.hs  Socket.hs
backend/hokm-api/src/Hokm/Api/Network/Anatomy/Api/: Authentication.hs  Game.hs  User.hs  Users.hs
backend/hokm-api/src/Hokm/Api/Network/Anatomy/Socket/: Game.hs
backend/hokm-api/src/Hokm/Api/Network/Server/: Api.hs  Socket.hs
backend/hokm-api/src/Hokm/Api/Network/Server/Api/: Authentication.hs  Game.hs  User.hs  Users.hs
backend/hokm-api/src/Hokm/Api/Network/Server/Socket/: Game.hs
backend/hokm-api/src/Hokm/Api/Network/Wai/: Application.hs  Cors.hs  Log.hs
backend/hokm-api/src/Hokm/Api/Servant/: Authentication.hs  Response.hs
backend/hokm-api/test/: Main.hs
backend/hokm-api/test/Test/Hokm/Api/Data/: Game.hs
backend/hokm-prelude/: hokm-prelude.cabal  package.dhall
backend/hokm-prelude/src/: Prelude.hs
backend/hokm-prelude/src/Hokm/: Chronos.hs  Logger.hs
backend/hokm-prelude/src/Hokm/Control/: Applicative.hs
backend/hokm-prelude/src/Hokm/Data/: ByteString.hs  Char.hs  Foldable.hs  Maybe.hs  Text.hs  Validation.hs
backend/hokm-prelude/src/Hokm/Data/Chronos/: Future.hs
backend/hokm-prelude/src/Hokm/Data/Text/: NonEmpty.hs
backend/hokm-prelude/src/Hokm/Logger/: Formatting.hs  Message.hs  Severity.hs
backend/hokm-prelude/src/Hokm/Type/: Monoid.hs
frontend/: README.md  elm.json  index.html
frontend/src/: App.elm  Asset.elm  Main.elm  Page.elm  Route.elm
frontend/src/Data/: Authentication.elm  Card.elm  Game.elm  Session.elm
frontend/src/Effect/: Api.elm  Socket.elm  Store.elm
frontend/src/Effect/Store/: Credential.elm
frontend/src/Page/: Blank.elm  FindGame.elm  Game.elm  Home.elm  Login.elm  NotFound.elm
frontend/src/View/: Card.elm
src/: Prelude.hs  Soltan.hs
src/Soltan/: App.hs  Chronos.hs  Hokm.hs  Logger.hs  Server.hs  Socket.hs  SocketApp.hs
src/Soltan/App/: Auth.hs  Channel.hs  Client.hs  Env.hs  Error.hs  Game.hs  Lobby.hs  Monad.hs  Room.hs  Socket.hs  Types.hs
src/Soltan/Core/: Env.hs
src/Soltan/Data/: AtMostThree.hs  Checker.hs  Four.hs  Game.hs  Has.hs  Modifier.hs  UserGame.hs  Username.hs
src/Soltan/Data/Game/: Action.hs  Card.hs
src/Soltan/Data/Game/Card/: Suit.hs  Value.hs
src/Soltan/Data/Monoid/: Checker.hs  Modifier.hs
src/Soltan/Effect/: GameState.hs  Hub.hs  Id.hs  Lobby.hs  Shuffle.hs
src/Soltan/Effects/: App.hs  Clients.hs  Concurrent.hs  Lobby.hs  LogMessages.hs  Now.hs  Random.hs  Stream.hs  WebSocket.hs
src/Soltan/Game/: Action.hs  Broadcast.hs  Manager.hs  Msg.hs  Types.hs
src/Soltan/Game/Action/: Checks.hs  Modifiers.hs
src/Soltan/Hokm/: Action.hs  ActionValidation.hs  Hokm.hs  Scoring.hs  Types.hs  Utils.hs
src/Soltan/Logger/: Formatting.hs  Message.hs  Severity.hs
src/Soltan/Network/Wai/: Cors.hs  Log.hs
src/Soltan/Server/: Api.hs  Game.hs  Lobby.hs  Prelude.hs  Socket.hs  Types.hs
src/Soltan/Socket/: Clients.hs  Lobby.hs  Msg.hs  Prelude.hs  Table.hs  Types.hs  Utils.hs
test/: Main.hs
test/Hokm/: Utils.hs
test/Test/Hokm/: ActionSpec.hs  ActionValidationSpec.hs  HokmSpec.hs  UtilsSpec.hs
test/Test/Socket/: MsgSpec.hs
test/Test/Soltan/Data/: Game.hs
test/Test/Soltan/Game/: Action.hs
