cabal-version:       2.4
name:                soltan
version:             0.0.0.0
synopsis:            Hokm Game Haskell implementation
description:         Please see the README on Github at <https://github.com/jedimahdi/soltan#readme>
homepage:            https://github.com/jedimahdi/soltan#readme
bug-reports:         https://github.com/jedimahdi/soltan/issues
author:              Mahdi Seyedan
maintainer:          jedimahdi <mahdi.se@yahoo.com>
tested-with:         GHC == 9.2.5

common common-options
  build-depends:       base
                     , relude
                     , text
                     , bytestring
                     , containers
                     , lens
                     , generic-lens
                     , aeson
                     , flow
                     , pointedlist
                     , refined
                     , random
                     , random-shuffle
                     , split
                     , stm
                     , safe-exceptions
                     , websockets
                     , singletons
                     , singletons-th
                     , constraints
                     , MonadRandom
                     , uuid
                     , ansi-terminal
                     , chronos
                     , wai-logger
                     , vector
                     , pipes
                     , pipes-aeson
                     , pipes-concurrency
                     , pipes-parse
                     , transformers
                     , mtl
                     , async
                     , unliftio

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields
                       -Wno-unused-local-binds
                       -Wno-unused-imports
                       -Wno-unused-matches
  mixins:   base hiding (Prelude)


  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLabels
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       GADTs
                       ViewPatterns
                       PatternSynonyms
                       BlockArguments
                       RankNTypes
                       StandaloneDeriving
                       NamedFieldPuns
                       DeriveAnyClass
                       DuplicateRecordFields

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prelude
                       Soltan
                       Soltan.Data.Username
                       Soltan.Data.Has
                       Soltan.Data.Four
                       Soltan.Data.AtMostThree
                       Soltan.Chronos
                       Soltan.Logger
                       Soltan.Logger.Message
                       Soltan.Logger.Formatting
                       Soltan.Logger.Severity
                       Soltan.Network.Wai.Log
                       Soltan.Network.Wai.Cors
                       Soltan.SocketApp
                       Soltan.Socket
                       Soltan.Socket.Types
                       Soltan.Socket.Utils
                       Soltan.Socket.Msg
                       Soltan.Socket.Clients
                       Soltan.Socket.Lobby
                       Soltan.Socket.Table
                       Soltan.Effects.WebSocket
                       Soltan.Hokm
                       Soltan.Hokm.Types
                       Soltan.Hokm.ActionValidation
                       Soltan.Hokm.Action
                       Soltan.Hokm.Utils
  build-depends:       co-log
                     , servant
                     , servant-server
                     , http-types
                     , network
                     , case-insensitive
                     , bcrypt
                     , postgresql-simple
                     , resource-pool
                     , warp 
                     , postgresql-simple-named
                     , servant-websockets
                     , wai
                     , wai-cors

executable soltan
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       soltan

test-suite soltan-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  -- other-modules:       Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       soltan
                     , hedgehog
                     , hspec
                     , hspec-hedgehog
  build-tool-depends: hspec-discover:hspec-discover == 2.*
