cabal-version: 3.0
name:          soltan
version:       0.1.0
synopsis:      Hokm Game Haskell implementation
description:
  Please see the README on Github at <https://github.com/jedimahdi/soltan#readme>

homepage:      https://github.com/jedimahdi/soltan#readme
bug-reports:   https://github.com/jedimahdi/soltan/issues
author:        Mahdi Seyedan
maintainer:    jedimahdi <mahdi.se@yahoo.com>
tested-with:   GHC ==9.6.4

common common-options
  build-depends:
    , aeson
    , ansi-terminal
    , async
    , base
    , bytestring
    , chronos
    , constraints
    , containers
    , flow
    , free
    , generic-lens
    , lens
    , MonadRandom
    , mtl
    , random
    , random-shuffle
    , relude
    , safe-exceptions
    , split
    , stm
    , text
    , transformers
    , unliftio
    , uuid
    , vector
    , wai-logger
    , websockets

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths
    -Wpartial-fields -Wno-unused-local-binds -Wno-unused-imports
    -Wno-unused-matches

  mixins:             base hiding (Prelude)
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Prelude
    Soltan
    Soltan.App
    Soltan.App.Auth
    Soltan.App.Channel
    Soltan.App.Game
    Soltan.App.Room
    Soltan.App.Socket
    Soltan.App.Types
    Soltan.Chronos
    Soltan.Data.AtMostThree
    Soltan.Data.Four
    Soltan.Data.Has
    Soltan.Data.Username
    Soltan.Game.Manager
    Soltan.Game.Types
    Soltan.Hokm
    Soltan.Hokm.Action
    Soltan.Hokm.ActionValidation
    Soltan.Hokm.Hokm
    Soltan.Hokm.Scoring
    Soltan.Hokm.Types
    Soltan.Hokm.Utils
    Soltan.Logger
    Soltan.Logger.Formatting
    Soltan.Logger.Message
    Soltan.Logger.Severity
    Soltan.Socket
    Soltan.Socket.Clients
    Soltan.Socket.Lobby
    Soltan.Socket.Msg
    Soltan.Socket.Table
    Soltan.Socket.Types
    Soltan.Socket.Utils

  build-depends:
    , http-types
    , network
    , wai
    , wai-cors
    , warp

executable soltan
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  soltan

test-suite soltan-test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    Hokm.Hedgehog.Gen.Game
    Hokm.Utils
    Test.Hokm.ActionSpec
    Test.Hokm.ActionValidationSpec
    Test.Hokm.HokmSpec
    Test.Hokm.UtilsSpec
    Test.Socket.MsgSpec

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , hedgehog
    , hspec
    , hspec-hedgehog
    , soltan

  build-tool-depends: hspec-discover:hspec-discover
